# Telegraphy

./: .gitignore  AGENTS.md  BUILD_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  GREETINGS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  code of conduct.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sbom.cdx.json  sonar-project.properties  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  claude-code.yml  codeql.yml  ensure-labels.yml  python-publish.yml
commuted_calligraphy/: __init__.py
commuted_calligraphy/scripts/: __init__.py  run_coverage_workflow.py
commuted_calligraphy/scripts/cov_init/: sitecustomize.py
commuted_calligraphy/story_brief/: __init__.py  generate_story_brief.py  partner_models.py
commuted_calligraphy/story_brief/data/: partner_distributions.json  prompts.json
docs/: BACKWARD_COMPATIBILITY_AUDIT.md  STORY-BRIEF-MAINTAINER.md  Story Brief Generator Evaluation.md  build_checklist.md  data_io_refactor_and_test_coverage_review.md  dependabot_setup.md  legacy_tag_inventory.md  phase5_verification_2026-05-07.md  requirements-dev.md  requirements.md  review_2026-04-27.md  test_refactor_proposal.md
telegraphy/: __init__.py
telegraphy/gui/: __init__.py  cli_runner.py  models.py  tablet_app.py
telegraphy/scripts/: generate_sbom.py  run_coverage_workflow.py
telegraphy/story_brief/: __main__.py  _constants.py  _range_utils.py  availability_validation.py  cli.py  data_io.py  filenames.py  generate_story_brief.py  generation.py  generation_helpers.py  generation_invariants.py  linting.py  normalization.py  partner_models.py  rendering.py  schema_validation.py  schema_validation_common.py  schema_validation_config.py  schema_validation_titles_prompts.py  schema_validation_weather.py  story_data.py  validation.py
telegraphy/story_brief/data/: __init__.py  config.json  entities.json  partner_distributions.json  prompts.json  titles.json  weather.json
tests/: __init__.py  conftest.py  test_generate_sbom.py  test_project_metadata.py  test_run_coverage_workflow.py  test_tablet_app_coverage.py
tests/gui/: test_refactor_modules.py  test_tablet_poll_worker_queue.py
tests/story_brief/: test_availability_filters.py  test_cli_behavior.py  test_cli_subprocess_behavior.py  test_coverage_gaps.py  test_data_loading.py  test_filename_behavior.py  test_generation_determinism.py  test_main_behavior.py  test_markdown_output.py  test_partner_models.py  test_schema_validation.py  test_weighted_choice.py
tests/story_brief/cli/: test_main_behavior.py  test_main_module.py  test_subprocess_behavior.py
tests/story_brief/compat/: test_legacy_facade_exports.py
tests/story_brief/data_io/: test_data_loading.py  test_security_coverage.py
tests/story_brief/filenames/: test_filename_behavior.py
tests/story_brief/generation/: test_availability_filters.py  test_determinism.py  test_generation_invariants.py  test_weighted_choice.py
tests/story_brief/linting/: test_coverage_gaps.py
tests/story_brief/partner_models/: test_partner_models.py
tests/story_brief/rendering/: test_markdown_output.py
tests/story_brief/validation/: test_schema_validation.py
