[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "telegraphy"
version = "0.1.0"
description = "Telegraphy story brief generator"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["PyYAML>=6.0.2"]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "types-PyYAML>=6.0.12.20250822",
]

[project.scripts]
story-brief = "telegraphy.story_brief.cli:main"

[tool.setuptools.packages.find]
include = ["telegraphy*"]

[tool.setuptools.package-data]
"telegraphy.story_brief.data" = ["*.json"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
exclude = ["^telegraphy/scripts/"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
