[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "telegraphy"
version = "0.1.0"
description = "Telegraphy story brief generator"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["PyYAML>=6.0.3"]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "types-PyYAML>=6.0.12.20240311",
]

[project.scripts]
story-brief = "telegraphy.story_brief.cli:main"

[tool.setuptools.packages.find]
include = ["telegraphy*"]

[tool.setuptools.package-data]
"telegraphy.story_brief.data" = ["*.json"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
strict = true
exclude = ["^telegraphy/scripts/"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
